@@ -1,3 +1,7 @@
+2020-07-02 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x_dialog.c: Explicitly declare functions without arguments void.
+
 2020-04-14 Wiley E. Hill <wileyhill@gmail.com>
 
     * gattrib/src/Makefile.am: Add "copy-dt-needed-entries" flag to LDFLAGS
